--- a/Literature Review/MSCI POSTER draft.tex
+++ b/Literature Review/MSCI POSTER draft.tex
@@ -1,5 +1,5 @@
 
-\documentclass[twocolumn, a1paper, 20pt]{article}
+\documentclass[twocolumn, a1paper, 12pt]{article}
  %\usepackage[scale=0.78,size=a1]{beamerposter}
 %\setlength{\paperheight}{33.1in}
 %\setlength{\paperwidth}{23.4in}
@@ -57,10 +57,10 @@ When the electric impulse propagates a single muscle cell goes through three sta
   \item \textit{Excitable state}: the muscle cell is at rest with a negative built up potential.
   										
   \item \textit{Excited state}: the muscle cell is excited by its excited neighbours and the Voltage of the cell is at its peak. 
-  \item \textit{Refractory state} :the muscle cell goes through a phase during which it can't be excited again/
+  \item \textit{Refractory state} :the muscle cell goes through a phase during which it can't be excited again - this period is called \textit{refractory period)}.
 \end{itemize}  
 
-Where the refractory period depends on the last time a cell was excited.\\
+Where the refractory period depends on the last time a cell was excited and is always fixed to a constant.\\
 
 
 
@@ -78,7 +78,7 @@ The current research revolves around three possible approaches:
 
 
 
-\section{\textbf{Kim Christensen Model}}
+\section{\textbf{Kim Christensen's Model}}
 
 \subsection{Description of the model}
 
@@ -120,12 +120,18 @@ The model also shows that burning the area affected by AF effectively stops the 
 
 
 
-\section{\textbf{Implementing Restitution in Kim Christensen Model}} 
+\section{\textbf{Implementing Restitution }} 
+
+Even though in Prof.Christensen model, the refractory period of each muscle cell was always fixed, this is not what happens in a real heart.
+In a real heart the refractory period depends on the heart beat rate and on the last time each cell it was excited. The relationship between refractory period and heart beat rate is called restitution.
+\\
+In the first part of our project, we implemented restitution in Kim Christensen model in order
 
 
 
 
-\section{\textbf{Kim Christensen model on a Sphere}}
+
+\section{\textbf{Kim Christensen's model on a Sphere}}
 
 
 
